Upgraded akka to 2.2. Bumped scala to 2.10.3. Play to 2.1.5